# mesh-ai-assist

./: .gitignore  README.md  pyproject.toml
examples/: example.py  train_config.yml
scripts/: evaluate.py  infer.py  preprocess_data.py  train.py  train_config.yml
src/neural_mesh_simplification/: __init__.py
src/neural_mesh_simplification/api/: neural_mesh_simplifier.py
src/neural_mesh_simplification/data/: dataset.py
src/neural_mesh_simplification/losses/: combined_loss.py  overlapping_triangles_loss.py
src/neural_mesh_simplification/models/: edge_predictor.py  neural_mesh_simplification.py
src/neural_mesh_simplification/tests/: test_edge_predictor.py  test_face_classifier.py  test_mesh_operations.py  test_metrics.py  test_model.py  test_model_layers.py  test_point_sampler.py
src/neural_mesh_simplification/tests/losses/: test_edge_crossings_loss.py  test_overlapping_triangles_loss.py  test_proba_chamfer_distance.py  test_proba_surface_distance.py  test_triangle_collision_loss.py
src/neural_mesh_simplification/trainer/: trainer.py
src/neural_mesh_simplification/utils/: __init__.py  mesh_write.py  sample_meshes.py
tests/: test_edge_predictor.py  test_metrics.py  test_model.py
